{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 17,
  "lineage": "37c28b64-f91c-d3f6-cc77-5e30333db074",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e8fee44c39f789e",
            "arn": "arn:aws:ec2:ap-southeast-1:728362854120:elastic-ip/eipalloc-01e8fee44c39f789e",
            "association_id": "eipassoc-0d6b40c422b61ebdd",
            "domain": "vpc",
            "id": "eipalloc-01e8fee44c39f789e",
            "instance": "i-04a040d0ef31967ad",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0168d7d7b957715db",
            "private_dns": "ip-10-0-1-76.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.76",
            "public_dns": "ec2-47-131-181-246.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.131.181.246",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "aiops-watcher-eip"
            },
            "tags_all": {
              "Name": "aiops-watcher-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.vm",
            "aws_security_group.vm",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d0d141bde51e80ef",
            "arn": "arn:aws:ec2:ap-southeast-1:728362854120:instance/i-04a040d0ef31967ad",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a040d0ef31967ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "aiops-watcher-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0168d7d7b957715db",
            "private_dns": "ip-10-0-1-76.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.76",
            "public_dns": "ec2-47-131-181-246.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.131.181.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b9c72f87317dfad4",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aafe88c1d62121d2",
            "tags": {
              "Name": "aiops-watcher-vm"
            },
            "tags_all": {
              "Name": "aiops-watcher-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0932eac2140243530"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vm",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:728362854120:internet-gateway/igw-0753b9420d1c6db64",
            "id": "igw-0753b9420d1c6db64",
            "owner_id": "728362854120",
            "tags": {
              "Name": "aiops-watcher-igw"
            },
            "tags_all": {
              "Name": "aiops-watcher-igw"
            },
            "vpc_id": "vpc-07540403aed0acb2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:728362854120:route-table/rtb-08efdd73c888e3a6a",
            "id": "rtb-08efdd73c888e3a6a",
            "owner_id": "728362854120",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0753b9420d1c6db64",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aiops-watcher-public-rt"
            },
            "tags_all": {
              "Name": "aiops-watcher-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07540403aed0acb2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be1746880a4f6e33",
            "route_table_id": "rtb-08efdd73c888e3a6a",
            "subnet_id": "subnet-0aafe88c1d62121d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:728362854120:security-group/sg-0932eac2140243530",
            "description": "Allow SSH from my IP only, HTTP/HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0932eac2140243530",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Watcher app NodePort (temporary, until Ingress is set up)",
                "from_port": 30080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30080
              },
              {
                "cidr_blocks": [
                  "180.190.174.11/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aiops-watcher-sg",
            "name_prefix": "",
            "owner_id": "728362854120",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aiops-watcher-sg"
            },
            "tags_all": {
              "Name": "aiops-watcher-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07540403aed0acb2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:728362854120:subnet/subnet-0aafe88c1d62121d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aafe88c1d62121d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728362854120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aiops-watcher-public-subnet"
            },
            "tags_all": {
              "Name": "aiops-watcher-public-subnet"
            },
            "vpc_id": "vpc-07540403aed0acb2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:728362854120:vpc/vpc-07540403aed0acb2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0842a61918c1ff319",
            "default_route_table_id": "rtb-04db89a9e61cb70dd",
            "default_security_group_id": "sg-0332b5002793d18f1",
            "dhcp_options_id": "dopt-012ed621f826dc491",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07540403aed0acb2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04db89a9e61cb70dd",
            "owner_id": "728362854120",
            "tags": {
              "Name": "aiops-watcher-vpc"
            },
            "tags_all": {
              "Name": "aiops-watcher-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}